# python2haskell

./: CHANGELOG.md  README.md  python2haskell.cabal
app/: Main.hs  ToHaskell.hs
app/ToHaskell/: Pure.hs
test/: class.py  fib.py  typedfib.py  variable.py
