cabal-version:      2.4
name:               python2haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable python2haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    ToHaskell

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.9 && < 5
                    , language-python
                    , template-haskell
                    , pretty-simple
                    , ghc-prim
                    , transformers
                    , containers
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
